--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -25,6 +25,8 @@
     <!-- 黑色: 25 -->
     <color name="black_trans30">#4d000000</color>
     <!-- 黑色: 30 -->
+    <color name="black_trans40">#66000000</color>
+    <!-- 黑色: 40 -->
     <color name="black_trans50">#80000000</color>
     <!-- 黑色：50 -->
     <color name="black_trans70">#b3000000</color>
