--- a/workspace/WeAC/src/main/res/layout/gv_theme.xml
+++ b/workspace/WeAC/src/main/res/layout/gv_theme.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bg"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_margin="1dp"
-        android:contentDescription="@null"
-        android:scaleType="centerInside">
+        android:layout_height="150dp"
+        android:scaleType="centerCrop">
     </ImageView>
 
     <ImageView
@@ -18,8 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="5dp"
-        android:contentDescription="@null" >
+        android:layout_margin="10dp">
     </ImageView>
 
 </FrameLayout>
