local album1 Android-Universal-Image-Loader

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -82,6 +82,8 @@
     <color name="blue_ice">#72abf8</color>
     <!-- 冷蓝色:夜间气温 -->
 
+    <color name="default_image_background">#FFDEDEDE</color>
+
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#FF4081</color>
