--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="white">#FFFFFF</color>
-    <!-- 白色 -->
+    <color name="transparent">#00000000</color>
+
     <color name="white_trans10">#1affffff</color>
     <!-- 白色:10 -->
     <color name="white_trans20">#33ffffff</color>
@@ -13,8 +13,8 @@
     <!-- 白色:60 -->
     <color name="white_trans90">#e6ffffff</color>
     <!-- 白色:90 -->
-    <color name="black">#000000</color>
-    <!-- 黑色 -->
+    <color name="white">#FFFFFF</color>
+    <!-- 白色 -->
     <color name="black_trans10">#1a000000</color>
     <!-- 黑色: 10 -->
     <color name="black_trans15">#26000000</color>
@@ -35,6 +35,8 @@
     <!-- 黑色：80 -->
     <color name="black_trans90">#E6000000</color>
     <!-- 黑色：90 -->
+    <color name="black">#000000</color>
+    <!-- 黑色 -->
     <color name="red">#E6FF0000</color>
     <!-- 红色 -->
     <color name="gray_background_color">#F4F4F4</color>
