二维码扫描验证网址，显示扫描内容

--- a/workspace/WeAC/src/main/res/layout/activity_capture.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_capture.xml
@@ -30,10 +30,30 @@
                 android:text="@string/scan_scan"/>
 
             <TextView
-                android:id="@+id/action_capture"
+                android:id="@+id/action_album"
                 style="@style/action_tv"
                 android:layout_alignParentRight="true"
                 android:text="@string/album"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            style="@style/action_llyt"
+            android:layout_gravity="bottom"
+            android:background="@color/black_trans70"
+            >
+
+            <ImageView
+                android:id="@+id/action_light"
+                style="@style/action_icon"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/bg_btn_light"/>
+
+            <TextView
+                android:id="@+id/action_make_qr_code"
+                style="@style/action_tv"
+                android:layout_alignParentRight="true"
+                android:text="@string/qr_code_generate"/>
 
         </RelativeLayout>
 
