--- a/workspace/WeAC/src/main/res/values/dimens.xml
+++ b/workspace/WeAC/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="divider_line_thin">0.5dp</dimen>
     <dimen name="divider_line_thick">1dp</dimen>
     <dimen name="list_view_margin">10dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
