--- a/workspace/WeAC/src/main/res/layout/fm_Life_index_detail.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_Life_index_detail.xml
@@ -21,6 +21,7 @@
 
     <Button
         android:id="@+id/roger_btn"
-        style="@style/single_btn"/>
+        style="@style/single_btn"
+        android:layout_height="40dp"/>
 
 </LinearLayout>
