--- a/workspace/WeAC/src/main/res/layout/fm_weather_alarm.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_weather_alarm.xml
@@ -33,6 +33,7 @@
 
     <Button
         android:id="@+id/roger_btn"
-        style="@style/single_btn"/>
+        style="@style/single_btn"
+        android:layout_height="40dp"/>
 
 </LinearLayout>
