本地相册添加最近文件夹并汉字优先排序

--- a/workspace/WeAC/src/main/res/layout/activity_capture.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_capture.xml
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="1dp"
-                    android:text="对准二维码/条形码"
+                    android:text="@string/Alignment_code"
                     android:textColor="@color/white_trans60"
                     android:textSize="14sp"/>
             </FrameLayout>
