--- a/workspace/WeAC/src/main/res/layout/activity_capture.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_capture.xml
@@ -107,5 +107,33 @@
                 android:text="@string/album"/>
 
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/progress_bar_llyt"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape_circle_progress_bar"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <fr.castorflex.android.circularprogressbar.CircularProgressBar
+                android:id="@+id/loading_progress"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:indeterminate="true"
+                app:cpb_colors="@array/gplus_colors"/>
+
+            <TextView
+                android:id="@+id/loading_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/identifying"
+                android:textColor="@color/white_trans90"
+                android:textSize="@dimen/big_small"/>
+        </LinearLayout>
     </FrameLayout>
 </FrameLayout>
