星期按钮按下颜色

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -79,6 +79,8 @@
     <!-- 深蓝色:确定按钮按下 -->
     <color name="blue_tog_btn">#397cbf</color>
     <!-- 深蓝色:toggleBtn -->
+    <color name="blue_tog_btn_pressed">#286DD4</color>
+    <!-- 深蓝色:toggleBtn按下 -->
     <color name="yellow_hot">#f9c000</color>
     <!-- 暖黄色:白天气温 -->
     <color name="blue_ice">#72abf8</color>
@@ -97,8 +99,8 @@
         <item>@color/gplus_color_4</item>
     </integer-array>
 
-<!--    <color name="base_bg">#ffeeeeee</color>
-    <color name="base_msg_color">#ff999999</color>-->
+    <!--    <color name="base_bg">#ffeeeeee</color>
+        <color name="base_msg_color">#ff999999</color>-->
     <color name="gplus_color_3">#3e802f</color>
     <color name="gplus_color_2">#f4b400</color>
     <color name="gplus_color_1">#427fed</color>
