添加自动定位 自定义dialog

--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:screenOrientation">portrait</item>
     </style>
+
     <style name="Transparent.AppCompat.NoActionBar" parent="@style/Theme.AppCompat.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:screenOrientation">portrait</item>
@@ -83,23 +84,6 @@
         <item name="android:background">@color/gray_divider_line</item>
     </style>
 
-    <style name="Theme.MyDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <!-- 设置dialog的背景 -->
-        <!-- <item name="android:windowNoTitle">true</item> -->
-        <!-- 设置title -->
-        <!-- <item name="android:windowFrame">@null</item> -->
-        <!-- 设置边框 -->
-        <!-- <item name="android:windowIsTranslucent">true</item> -->
-        <!-- 设置半透明 -->
-        <!-- <item name="android:backgroundDimEnabled">true</item> -->
-        <!-- 背景是否模糊显示 -->
-        <!-- <item name="android:windowFullscreen">true</item> -->
-        <!-- 设置全屏 -->
-        <!-- <item name="android:windowIsFloating">true</item> -->
-        <!-- 是否浮现在activity之上 -->
-    </style>
-
     <style name="progress_weather">
         <item name="android:indeterminateDrawable">@drawable/progressbar_circle_1</item>
         <item name="android:minWidth">22dp</item>
@@ -126,5 +110,26 @@
         <item name="android:text">@string/roger</item>
         <item name="android:textColor">@color/white_trans90</item>
         <item name="android:background">@drawable/bg_btn_sure</item>
+    </style>
+
+    <style name="Theme.MyDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 设置dialog的背景 -->
+        <!-- <item name="android:windowNoTitle">true</item> -->
+        <!-- 设置title -->
+        <!-- <item name="android:windowFrame">@null</item> -->
+        <!-- 设置边框 -->
+        <!-- <item name="android:windowIsTranslucent">true</item> -->
+        <!-- 设置半透明 -->
+        <!-- <item name="android:backgroundDimEnabled">true</item> -->
+        <!-- 背景是否模糊显示 -->
+        <!-- <item name="android:windowFullscreen">true</item> -->
+        <!-- 设置全屏 -->
+        <!-- <item name="android:windowIsFloating">true</item> -->
+        <!-- 是否浮现在activity之上 -->
+        <!--<item name="android:windowContentOverlay">@null</item>-->
+        <!--对话框是否有遮盖-->
+        <!--<item name="android:backgroundDimEnabled">false</item>-->
+        <!-- 是否允许背景灰暗 -->
     </style>
 </resources>
