--- a/workspace/WeAC/src/main/res/values/dimens.xml
+++ b/workspace/WeAC/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="border_margin">19dp</dimen>
 </resources>
